# web_server_clang

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: database.h  http.h  sock.h  structs.h  utils.h
lib/: sock.c
src/: server.c
test/: main.py
